--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "spacebookschedulingapi",
   "version": "1.0.0",
   "description": "API used to schedule a date and time for posts to be sent.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
